--- a/src/main/webapp/i18n/en/przepis.json
+++ b/src/main/webapp/i18n/en/przepis.json
@@ -21,7 +21,7 @@
             "name": "Name",
             "kategoriaPrzepisu": "KategoriaPrzepisu",
             "pracochlonnoscPrzepisu": "PracochlonnoscPrzepisu",
-            "przepisProdukt": "PrzepisProdukt",
+            "przepisPartProdukt": "PrzepisPartProdukt",
             "przepisDescription": "PrzepisDescription"
         }
     }
