--- a/src/main/webapp/i18n/fr/produkt.json
+++ b/src/main/webapp/i18n/fr/produkt.json
@@ -15,7 +15,7 @@
             "name": "Name",
             "miaraProduktu": "MiaraProduktu",
             "rodzajProduktu": "RodzajProduktu",
-            "przepisProdukt": "PrzepisProdukt"
+            "przepisPartProdukt": "PrzepisPartProdukt"
         }
     }
 }
