--- a/src/main/webapp/i18n/fr/przepis.json
+++ b/src/main/webapp/i18n/fr/przepis.json
@@ -18,7 +18,7 @@
             "name": "Name",
             "kategoriaPrzepisu": "KategoriaPrzepisu",
             "pracochlonnoscPrzepisu": "PracochlonnoscPrzepisu",
-            "przepisProdukt": "PrzepisProdukt",
+            "przepisPartProdukt": "PrzepisPartProdukt",
             "przepisDescription": "PrzepisDescription"
         }
     }
